--- a/css/estilos.css
+++ b/css/estilos.css
@@ -30,6 +30,8 @@ body{
     display: grid;
     grid-template-rows: 100px 1fr;
     color: #ffffff;
+    text-shadow: 7px 4px 5px rgb(0, 0, 14);
+
 
 }
 
